Bug 878509 - Restore the HTMLImageElement.lowsrc, x, y attributes that were unintentionally removed; r=smaug